--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,18 @@
+name: 'Build'
 
+on: push
+
+jobs:
+  tsc:
+    name: 'Compile Typescript'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Install NodeJS v12
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: yarn install
+        run: yarn install
+      - name: tsc
+        uses: icrawl/action-tsc@v1
