--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,5 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 18
-      - name: yarn install
-        run: yarn install
-      - name: tsc
-        uses: icrawl/action-tsc@v1
+      - run: 'npm ci'
+      - run: 'npx tsc'
