--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "devDependencies": {
+    "electron": "^21.2.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "jwt-decode": "^3.1.2",
+    "keytar": "^7.9.0",
+    "node-fetch": "^3.2.10",
+    "os": "^0.1.2"
   }
 }
