--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,15 +4,25 @@ on: push
 
 jobs:
   tsc:
-    name: 'Compile Typescript'
+    name: "Compile Typescript"
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v1
-      # - name: Install NodeJS v18
-      #  uses: actions/setup-node@v1
-      #  with:
-      #    node-version: 18
-      - run: 'cd ${{ github.workspace }}'
-      # - run: 'npm ci'
-      # - run: 'npx tsc'
-      - run: 'touch file.txt'
+      - uses: actions/checkout@v3
+      
+      - name: "Install NodeJS v18"
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          
+      - name: "Install Packages"
+      - run: "cd ${{ github.workspace }}"
+      - run: "npm ci"
+      
+      - name: "Compile Typescript"
+      - run: "npx tsc"
+      
+      - name: "Upload Artifacts"
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Compiled Javascript
+          path: "./**/*.js"
