--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "jwt-decode": "^3.1.2",
     "keytar": "^7.9.0",
-    "node-fetch": "^3.2.10",
-    "os": "^0.1.2"
+    "node-fetch": "^3.2.10"
   }
 }
