--- a/package.json
+++ b/package.json
@@ -8,5 +8,24 @@
     "keytar": "^7.9.0",
     "node-fetch": "^3.2.10"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "name": "auth0-electron",
+  "description": "Auth0 authentiation and authorization library for Elecrton",
+  "main": "lib/index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/connect-org/Auth0-Electron.git"
+  },
+  "author": "Elijah629",
+  "license": "BSD-3-Clause",
+  "bugs": {
+    "url": "https://github.com/connect-org/Auth0-Electron/issues"
+  },
+  "homepage": "https://github.com/connect-org/Auth0-Electron#readme"
 }
