--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "keytar": "^7.9.0",
     "node-fetch": "^3.2.10"
   },
-  "version": "1.0.0",
+  "version": "1.0.1",
   "name": "auth0-electron",
   "description": "Auth0 authentiation and authorization library for Elecrton",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint .",
+    "publish": "npx tsc && npm publish"
   },
   "repository": {
     "type": "git",
