--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "removeComments": true
+    "removeComments": true,
+    "declaration": true
   },
   "include": ["./lib/*"]
 }
